correction du parametre dans EtapeController pour accepter les routes etape/format

--- a/templates/etape/index.html.twig
+++ b/templates/etape/index.html.twig
@@ -10,6 +10,7 @@
             <tr>
                 <th>Id</th>
                 <th>Libelle</th>
+                <th>Poste</th>
                 <th>Display_field</th>
                 <th>Archive</th>
                 <th>actions</th>
@@ -20,6 +21,7 @@
             <tr>
                 <td>{{ etape.id }}</td>
                 <td>{{ etape.libelle }}</td>
+                <td>{{ etape.poste.libelle }}</td>
                 <td>{{ etape.displayField }}</td>
                 <td>{{ etape.archive }}</td>
                 <td>
