--- a/templates/etape/index.html.twig
+++ b/templates/etape/index.html.twig
@@ -1,41 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Etape index{% endblock %}
+{% block title %}Poste index{% endblock %}
 
 {% block body %}
-    <h1>Etape index</h1>
+    <div class="dashboard">
+   
+    <div class="top-bar">
+        <h1>Etapes</h1>
+        <a href="{{ path('app_etape_new') }}" class="btn-add">+ Nouvelle etapes</a>
+    </div>
+    {% for etape in etapes %}
+        <div class="posts-list">
+            <a href="{{ path('app_etape_show', {'id': etape.id}) }}" class="post-link">
+                <div class="form-check-label">
+                    <div class="post-card">
+                        {{ etape.libelle }}
+                    </div>
+                </div>
+            </a>
+        </div>
+    {% endfor %}
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Libelle</th>
-                <th>Poste</th>
-                <th>Display_field</th>
-                <th>Archive</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for etape in etapes %}
-            <tr>
-                <td>{{ etape.id }}</td>
-                <td>{{ etape.libelle }}</td>
-                <td>{{ etape.poste.libelle }}</td>
-                <td>{{ etape.displayField }}</td>
-                <td>{{ etape.archive }}</td>
-                <td>
-                    <a href="{{ path('app_etape_show', {'id': etape.id}) }}">show</a>
-                    <a href="{{ path('app_etape_edit', {'id': etape.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="5">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_etape_new') }}">Create new</a>
+       
 {% endblock %}
+
