--- a/templates/poste/new.html.twig
+++ b/templates/poste/new.html.twig
@@ -1,11 +1,76 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Poste{% endblock %}
+{% block title %}Nouveau poste{% endblock %}
 
 {% block body %}
-    <h1>Create new Poste</h1>
+<div class="container mt-5">
 
-    {{ include('poste/_form.html.twig') }}
+    <h1 class="mb-4">
+        <i class="bi bi-folder-plus"></i> Créer un nouveau poste
+    </h1>
 
-    <a href="{{ path('app_poste_index') }}">back to list</a>
+    {{ form_start(form, {'attr': {'class': 'poste-form'}}) }}
+
+    <div class="poste-section_ClCh">
+        <div class="poste-header">
+            <h4 class="mb-0">
+                <i class="bi bi-folder"></i> Informations du poste
+            </h4>
+        </div>
+
+        <div class="etapes-grid">
+
+            {# Libellé #}
+            <div class="etape-field">
+                {{ form_label(form.libelle, null, {'label_attr': {'class': 'etape-label'}}) }}
+                <div class="etape-input">
+                    {{ form_widget(form.libelle, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.libelle) }}
+                </div>
+            </div>
+
+            {# Ordre #}
+            <div class="etape-field">
+                {{ form_label(form.ordre, null, {'label_attr': {'class': 'etape-label'}}) }}
+                <div class="etape-input">
+                    {{ form_widget(form.ordre, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.ordre) }}
+                </div>
+            </div>
+
+            {# TVA #}
+            <div class="etape-field">
+                {{ form_label(form.tva, null, {'label_attr': {'class': 'etape-label'}}) }}
+                <div class="etape-input">
+                    {{ form_widget(form.tva, {'attr': {'class': 'form-control'}}) }}
+                    {{ form_errors(form.tva) }}
+                </div>
+            </div>
+
+            {# Archivé #}
+            <div class="etape-field">
+                {{ form_label(form.archive, null, {'label_attr': {'class': 'etape-label'}}) }}
+                <div class="etape-input">
+                    {{ form_widget(form.archive) }}
+                    {{ form_errors(form.archive) }}
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-between mt-4">
+        <a href="{{ path('app_poste_index') }}" class="btn btn-secondary btn-lg">
+            <i class="bi bi-arrow-left"></i> Annuler
+        </a>
+
+        <button class="btn btn-primary btn-lg">
+            <i class="bi bi-save"></i> Enregistrer le poste
+        </button>
+    </div>
+
+    {{ form_widget(form._token) }}
+    {{ form_end(form, {'render_rest': false}) }}
+
+</div>
 {% endblock %}
