CSS sur etape/format
attend un changement il ne doit rester plus que lister etape/format avec un style css différent des autres lister

--- a/templates/etape_format/index.html.twig
+++ b/templates/etape_format/index.html.twig
@@ -3,33 +3,21 @@
 {% block title %}EtapeFormat index{% endblock %}
 
 {% block body %}
-    <h1>EtapeFormat index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Libelle</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for etape_format in etape_formats %}
-            <tr>
-                <td>{{ etape_format.id }}</td>
-                <td>{{ etape_format.libelle }}</td>
-                <td>
-                    <a href="{{ path('app_etape_format_show', {'id': etape_format.id}) }}">show</a>
-                    <a href="{{ path('app_etape_format_edit', {'id': etape_format.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_etape_format_new') }}">Create new</a>
+<div class="dashboard">
+    <div class="top-bar">
+        <h1>Formats d'etapes</h1>
+        <a href="{{ path('app_etape_format_new') }}" class="btn-add">+ Nouvelle etape de format</a>
+    </div>
+    {% for etape_format in etape_formats %}
+        <div class="posts-list">
+            <a href="{{ path('app_etape_format_show', {'id': etape_format.id}) }}" class="etape_format-link">
+                <div class="form-check-label">
+                    <div class="post-card">
+                        {{ etape_format.libelle }}
+                    </div>
+                </div>
+            </a>
+        </div>
+    {% endfor %}
+</div>
 {% endblock %}
