--- a/templates/poste/index.html.twig
+++ b/templates/poste/index.html.twig
@@ -3,8 +3,7 @@
 {% block title %}Poste index{% endblock %}
 
 {% block body %}
-    <div class="dashboard">
-   
+<div class="dashboard">
     <div class="top-bar">
         <h1>Postes</h1>
         <a href="{{ path('app_poste_new') }}" class="btn-add">+ Nouveau Postes</a>
@@ -20,5 +19,6 @@
             </a>
         </div>
     {% endfor %}
+</div>
 {% endblock %}
 
