--- a/templates/chantier/index.html.twig
+++ b/templates/chantier/index.html.twig
@@ -44,14 +44,16 @@
         <summary>À venir <span class="count">{{ chantiers_avenir|length }}</span></summary>
 
         {% for chantier in chantiers_avenir %}
-            <div class="project-item">
-                <div>
-                    <div class="client-name">{{ chantier.client.nom }}</div>
-                    <div class="date-info">
-                        Prévu le {{ chantier.datePrevue|date('d/m/Y') }}
+            <a class="project-item" href="{{ path('app_chantier_show', {'id': chantier.id}) }}">
+                <div class="project-item">
+                    <div>
+                        <div class="client-name">{{ chantier.client.nom }}</div>
+                        <div class="date-info">
+                            Prévu le {{ chantier.datePrevue|date('d/m/Y') }}
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         {% endfor %}
     </details>
 
@@ -60,14 +62,16 @@
         <summary>Terminés <span class="count">{{ chantiers_terminer|length }}</span></summary>
 
         {% for chantier in chantiers_terminer %}
-            <div class="project-item">
-                <div>
-                    <div class="client-name">{{ chantier.client.nom }}</div>
-                    <div class="date-info">
-                        Réception le {{ chantier.dateReception|date('d/m/Y') }}
+            <a class="project-item" href="{{ path('app_chantier_show', {'id': chantier.id}) }}">
+                <div class="project-item">
+                    <div>
+                        <div class="client-name">{{ chantier.client.nom }}</div>
+                        <div class="date-info">
+                            Réception le {{ chantier.dateReception|date('d/m/Y') }}
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         {% endfor %}
     </details>
 
@@ -76,12 +80,14 @@
         <summary>Archives <span class="count">{{ chantiers_archiver|length }}</span></summary>
 
         {% for chantier in chantiers_archiver %}
-            <div class="project-item">
-                <div>
-                    <div class="client-name">{{ chantier.client.nom }}</div>
-                    <div class="date-info">{{ chantier.ville }}</div>
+            <a class="project-item" href="{{ path('app_chantier_show', {'id': chantier.id}) }}">
+                <div class="project-item">
+                    <div>
+                        <div class="client-name">{{ chantier.client.nom }}</div>
+                        <div class="date-info">{{ chantier.ville }}</div>
+                    </div>
                 </div>
-            </div>
+            </a>
         {% endfor %}
     </details>
 
