--- a/templates/poste/index.html.twig
+++ b/templates/poste/index.html.twig
@@ -12,23 +12,11 @@
 
     {% for poste in postes %}
         <details class="current">
-            <summary class="poste-summary">
-    <span class="poste-left">
-        {{ poste.libelle }}
-        <span class="count">{{ poste.etapes|length }}</span>
-    </span>
+            <summary>
+               <a href="{{ path('app_poste_show', {'id': poste.id}) }}">{{ poste.libelle }}</a>
+                <span class="count">{{ poste.etapes|length }}</span>
+            </summary>
 
-    <span class="poste-right">
-        <span class="montant ht">
-            HT :
-            {{ totauxParPoste[poste.id].ht ?? 0 | number_format(2, ',', ' ') }} €
-        </span>
-        <span class="montant ttc">
-            TTC :
-            {{ totauxParPoste[poste.id].ttc ?? 0 | number_format(2, ',', ' ') }} €
-        </span>
-    </span>
-</summary>
 
 
             {% if poste.etapes|length > 0 %}
@@ -37,7 +25,7 @@
                        href="{{ path('app_etape_show', {'id': etape.id}) }}">
                         <div>
                             <div class="client-name">
-                                {{ etape.libelle }}
+                             {{ etape.libelle }}
                             </div>
                         </div>
                     </a>
