--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -274,3 +274,7 @@
             border-color: var(--primary);
             color: var(--primary);
         }
+        .client-name {
+            font-weight: 400; /* normal */
+        }
+        
