--- a/templates/etape/show.html.twig
+++ b/templates/etape/show.html.twig
@@ -13,7 +13,7 @@
             <a href="{{ path('app_etape_edit', {'id': etape.id}) }}" class="btn-back">
                 Modifier
             </a>
-            <a href="{{ path('app_etape_index') }}" class="btn-back">
+            <a href="{{ path('app_poste_index') }}" class="btn-back">
                 ← Retour
             </a>
         </div>
